crates/toml/tests/snapshots/invalid/integer/negative-hex.stderr
TOML parse error at line 1, column 16
  |
1 | negative-hex = -0xff
  |                ^
integers with a radix cannot be signed, expected nothing
